# scene-query

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: default.yaml  dev.yaml  prod.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md
python/: __init__.py
python/agent/: __init__.py  loop.py  schemas.py  session.py  tools.py
python/api/: _limiter.py  app.py  schemas.py
python/api/routes/: agent.py  ingest.py  query.py  scene.py
python/feature_lifting/: __init__.py  clip_extractor.py  feature_projector.py  grounding_dino.py  sam_lifter.py
python/feature_store/: __init__.py  index.py  persistence.py
python/ingestion/: __init__.py  loaders.py  validators.py
python/models/: __init__.py  loaders.py  registry.py
python/preprocessing/: __init__.py  pipeline.py
python/query_engine/: __init__.py  encoder.py  reranker.py  searcher.py
python/utils/: __init__.py  errors.py  events.py  ipc.py  logging.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/ipc/: receiver.rs
rust/src/viewer/: highlight.rs  mod.rs  overlay.rs  render_loop.rs  threecrate_buffer.rs
rust/tests/: ipc_round_trip.rs
scripts/: download_models.sh  prepare_scene.py  smoke_ipc.py  validate_lifting.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: camera_params.json
tests/integration/: test_api_endpoints.py  test_ingestion_pipeline.py  test_query_pipeline.py  test_scene_registry_concurrency.py
tests/unit/: test_feature_projector.py  test_feature_store.py  test_query_encoder.py  test_query_rate_limit.py  test_schemas.py  test_searcher.py
