[package]
name = "scene-query-viewer"
version = "0.1.0"
edition = "2021"
description = "Rust viewer bridge for scene-query (threecrate integration)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
threecrate-gpu = { workspace = true }
pollster = "0.4"
nalgebra = "0.34"
winit = "0.30"

[lib]
name = "scene_query_viewer"
crate-type = ["cdylib", "rlib"]
